index and StyleIndex

--- a/StyleIndex.css
+++ b/StyleIndex.css
@@ -5,8 +5,12 @@
     font-family: Arial, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
-    text-decoration: none;
+    text-decoration: none;  
     color: inherit;
 }
 
