--- a/Style_Profile.css
+++ b/Style_Profile.css
@@ -115,3 +115,17 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
+
+img{
+    width:150px;
+    height:150px;
+    border-radius:50%;
+    object-fit:cover;
+    border:2px solid #000000;
+    margin-bottom:10px;
+    margin-top:10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+}
