--- a/css/StyleLoginAdmin.css
+++ b/css/StyleLoginAdmin.css
@@ -5,14 +5,13 @@
     font-family:  Arial, sans-serif;
 }
 
-body {
+body{
+    padding-top: 80px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right, #e2e2e2, #cb7272);
-    padding-top: 80px;
+    background : linear-gradient(to left,#e2e2e2,#7284cb)
 }
 
 .login-container{
@@ -28,6 +27,7 @@ body {
     padding: 30px;
     background-color: aliceblue;
     box-shadow: 3px 3px 10px rgba(0,0,0,0.3);
+
 }
 
 .login-box h2{
@@ -52,7 +52,7 @@ body {
 .login-box button{
     width: 100%;
     padding: 10px;
-    background-color: rgb(255, 90, 81);
+    background-color: rgb(81, 119, 255);
     margin-top: 30px;
     border-radius: 10px;
     border: none;
@@ -64,7 +64,7 @@ body {
 }
 
  .login-box button:hover{
-    background-color: rgb(255, 32, 32);
+    background-color: rgb(39, 32, 255);
     color: #edf0f0;
 }
 
@@ -78,14 +78,17 @@ body {
 
 .login-box a{
     font-size: 16px;
-    color: rgb(255, 90, 81) ;
+    color: rgb(81, 136, 255) ;
 }
 
 .login-box a:hover{
-    color: rgb(255, 32, 32)
+    color: rgb(50, 32, 255)
 }
 
-
+.page-1{
+    height: 500px;
+    width: 100%;
+}
 
 .navbar {
   position: fixed;
@@ -118,3 +121,5 @@ body {
     text-decoration: none;
     color: inherit;
 }
+
+
